# DinoGame

./: .gitignore  CMakeLists.txt  DinoGame.kdev4  Instution.txt  install  main.cpp  run
.kdev4/: DinoGame.kdev4
BackGround/: BackGround.hpp  BackObject.cpp  BackObject.hpp  Background.cpp  Background.h
Dino/: Dino.cpp  Dino.h
Enemy/: Enemy.h
Kaktus/: Kaktus.cpp  Kaktus.h
PixeloramaFile/: Dino.pxo  DinoAnimate.pxo  Kaktus.pxo  Kaktus2.pxo  sand.pxo  sand1.pxo  sand2.pxo  sand3.pxo  start.pxo  start_focus.pxo
Platform/: Platform.cpp  Platform.hpp
Textures/: Animate.cpp  Animate.hpp  Textures.cpp  Textures.h
Vectors/: Vector2D.cpp  Vector2D.h
downloaderSFML/: downloadSFML
platforma/: platformObject.hpp  platform_array.cpp  platform_array.h  platforma.cpp  platforma.h
